--- a/package.json
+++ b/package.json
@@ -9,6 +9,7 @@
     "gh-pages": "^3.2.3",
     "react": "^17.0.2",
     "react-dom": "^17.0.2",
+    "react-router-dom": "5.3.0",
     "react-scripts": "5.0.0",
     "web-vitals": "^2.1.0"
   },
@@ -17,7 +18,7 @@
     "build": "react-scripts build",
     "test": "react-scripts test",
     "eject": "react-scripts eject",
-    "deploy": "gh-pages -d bulid",
+    "deploy": "gh-pages -d build",
     "predeply": "npm run build"
   },
   "eslintConfig": {
